# filament

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.plan/: agent-hardening.md  agent-infrastructure-research.md  aggressive-qa.md  benchmarks-local.md  benchmarks.md  build-serialization.md  changeset-adt-refactor.md  code-review-session34.md  code-review-v1.md  conflict-resolution.md  daemon-autostart-blocker-depth.md  filament-v1.md  git-worktree-dispatch.md  gotchas.md  knowledge-graph-cli-plan.md  multi-agent-orchestration.md  persistent-job-queue.md  phase1-core.md  phase2-cli.md  phase3-daemon.md  phase4-dispatch.md  phase5-tui.md  phase6-integration.md  refactor-slug-adt.md  research-job-queues.md  simulation-v2-daemon.md  simulation-v3-advanced.md  test-standards.md  tui-enhancement.md  tui-messages-enhancement.md  v1-release-qa.md
.qa/: manual-qa-2026-03-03T1600.md  manual-qa-2026-03-03T1607.md  manual-qa-2026-03-03T1810.md  manual-qa-2026-03-04T1800.md  manual-qa-mcp-2026-03-03T1950.md  manual-qa-method.md  manual-qa-results.md  round1-4-results.md  session-02-core-crud.md  session-03-task-management.md  session-04-lessons-search.md  session-05-relations-graph.md  session-06-messaging-escalations.md  session-07-infrastructure.md  session-08-error-handling.md  session-09-daemon-multiagent.md  session-11-idempotency.md  session-12-docs-accuracy-2026-03-09.md  session-13-exploratory-2026-03-09.md  session-14-data-integrity.md  simulation-log-2026-03-04.md  simulation-v2-log-2026-03-04.md  simulation-v3-log-2026-03-04.md  simulation-v4-knowledge-capture-2026-03-10.md  simulation-v5-infra-governance-2026-03-10.md  simulation-v6-full-logs-2026-03-10.md  (+1 more)
crates/filament-cli/: Cargo.toml
crates/filament-cli/src/: main.rs
crates/filament-cli/src/commands/: agent.rs  audit.rs  completions.rs  config.rs  entity.rs  escalation.rs  export.rs  helpers.rs  hook.rs  init.rs  lesson.rs  mcp.rs  message.rs  mod.rs  query.rs  relation.rs  reserve.rs  search.rs  seed.rs  serve.rs  task.rs  tui.rs  watch.rs
crates/filament-cli/tests/: agent.rs  audit.rs  completions.rs  config.rs  edge_cases.rs  entity.rs  export.rs  init.rs  integration.rs  message.rs  query.rs  relation.rs  reserve.rs  task.rs  workflow.rs
crates/filament-cli/tests/common/: mod.rs
crates/filament-core/: Cargo.toml
crates/filament-core/src/: client.rs  config.rs  connection.rs  diff.rs  dto.rs  enums.rs  error.rs  graph.rs  lib.rs  models.rs  pagination.rs  protocol.rs  schema.rs  store.rs  types.rs  util.rs
crates/filament-core/tests/: conflict_test.rs  errors.rs  graph.rs  models.rs  protocol.rs  store.rs
crates/filament-core/tests/common/: mod.rs
crates/filament-daemon/: Cargo.toml
crates/filament-daemon/src/: config.rs  dispatch.rs  dto.rs  handler.rs  lib.rs  mcp.rs  roles.rs  server.rs  state.rs
crates/filament-daemon/src/handler/: agent_run.rs  dispatch.rs  entity.rs  event.rs  export.rs  graph.rs  message.rs  mod.rs  relation.rs  reservation.rs
crates/filament-daemon/src/prompts/: coder.txt  dockeeper.txt  planner.txt  reviewer.txt
crates/filament-daemon/tests/: daemon.rs  dispatch.rs  mcp.rs
crates/filament-tui/: Cargo.toml
crates/filament-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/filament-tui/src/app/: entities.rs  messages.rs  mod.rs
crates/filament-tui/src/views/: agents.rs  analytics.rs  config.rs  detail.rs  entities.rs  filter_bar.rs  graph.rs  messages.rs  mod.rs  reply.rs  reservations.rs  tasks.rs
crates/filament-tui/tests/: snapshots.rs
(+62 files in other folders)
