[package]
name = "filament-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for filament"

[[bin]]
name = "filament"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
filament-core = { path = "../filament-core" }
filament-daemon = { path = "../filament-daemon" }
filament-tui = { path = "../filament-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
