[package]
name = "filament-daemon"
version = "0.1.0"
edition = "2021"
description = "Daemon library: Unix socket server, MCP server"

[lints]
workspace = true

[dependencies]
filament-core = { path = "../filament-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
filament-core = { path = "../filament-core", features = ["test-utils"] }
tempfile = "3"
