[package]
name = "filament-tui"
version = "0.1.0"
edition = "2021"
description = "TUI library: ratatui app"

[lints]
workspace = true

[dependencies]
filament-core = { path = "../filament-core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[dev-dependencies]
filament-core = { path = "../filament-core", features = ["test-utils"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
